--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-intersection-observer": "^9.4.3",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.10.0",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^3.1.0",
     "typescript": "^5.3.3",
     "uuid": "^9.0.0",
